# UrbanSVI-QA

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.md
docs/api_reference/: index.rst
docs/tutorials/: index.rst
examples/: 01_quickstart.py  02_sampling_workflow.py  03_uncertainty_analysis.py  README.md
src/urban_svi_qa/: __init__.py  auditor.py  config.py  harvester.py  optimizer.py
src/urban_svi_qa/utils/: __init__.py  geometry.py
tests/: __init__.py  conftest.py  test_auditor.py  test_config.py  test_geometry.py  test_optimizer.py
